# golftourney

./: .env.example  .gitignore  manage.py  pyproject.toml  railway.toml
golftourney/: settings.py  urls.py  wsgi.py
static/css/: style.css
tournament/: admin.py  forms.py  models.py  urls.py  views.py
tournament/management/commands/: seed_packages.py
tournament/migrations/: 0001_initial.py  0002_add_contact_name.py  0003_add_registration_player.py  0004_add_addon_models.py  0005_add_logo_upload_fields.py  0006_add_package_sponsor_tier.py  0007_add_raffle_donation.py  0008_raffle_donation_value_delivery.py  0009_registration_logo_approved.py  0010_registration_token.py
tournament/templates/admin/tournament/registration/: change_list.html
tournament/templates/tournament/: base.html  confirmation.html  index.html  raffle_donate.html  raffle_donate_thanks.html  register.html
